Object Name Now Showing up

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 <script src="/assets/conversation_demo.js"></script>
 <script>
   document.addEventListener('DOMContentLoaded', function() {
-    var conversation_demo = new ConversationDemo('');
+    var conversation_demo = new ConversationDemo();
   })
 </script>
 <article class="homepage">
@@ -26,7 +26,7 @@
         <div class="bubble-heading">Answer</div>
         <div class="text">Cats</div>
       </div>
-      <div class="object-ref">Via <span class="object">Lamp Post #90210</span></div>
+      <div class="object-ref">Via <a href="#" class="object-link">Lamp Post #236346</a></div>
     </div>
 
     <button class="new-question hidden" id="new-question-button"></button>
