--- a/views/index.erb
+++ b/views/index.erb
@@ -6,34 +6,38 @@
   })
 </script>
 <article class="homepage">
-    <section class="hero">
-      <img class="image-bottom" src="/images/graphics.svg">
-      <img src="/images/yellow-bg.svg">
-      <a class="js-scroll-down-button scroll-down-button">How It Works</a>
-      <div class="fake-grid">
-        <div class="col-6-fake information-holder">
-          <h1>Hello Lamp Post woke up for the first time in London from Queen Elizabeth Olympic Park.</h1>
-          <div class="conversation-demo">
-    <div class="bubble question" id="question-bubble">
-      <div class="bubble-inner">
-        <div class="bubble-heading">Question</div>
-        <div class="text">Do you prefer cats or dogs?</div>
-      </div>
-    </div>
-
-    <div class="bubble answer" id="answer-bubble">
-      <div class="bubble-inner">
-        <div class="bubble-heading">Answer</div>
-        <div class="text">Cats</div>
-      </div>
-      <div class="object-ref">Via <a href="#" class="object-link">Lamp Post #236346</a></div>
-    </div>
-
-    <button class="new-question hidden" id="new-question-button"></button>
-    <button class="next-answer hidden" id="next-answer-button"></button>
-  </div>
+    <section class="hero message">
+      <div class="grid-container">
+          <div class="row text-row">
+            <div class="col-6">
+              <h1>Hello Lamp Post launches on 24th October, waking up for the first time in London from Queen Elizabeth Olympic Park.</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="conversation-demo">
+                <div class="bubble question" id="question-bubble">
+                  <div class="bubble-inner">
+                    <h4>Question</h4>
+                    <div class="text">Do you prefer cats or dogs?</div>
+                  </div>
+                </div>
+                <div class="bubble answer" id="answer-bubble">
+                  <div class="bubble-inner">
+                    <h4>Answer</h4>
+                    <div class="text">Cats</div>
+                  </div>
+                  <div class="object-ref">Via Lamp Post #236346</div>
+                </div>
+                <div class="buttons">
+                  <button class="new-question hidden" id="new-question-button">Next Question</button>
+                  <button class="next-answer hidden" id="next-answer-button">Next Answer</button>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
+        <img class="bg-image" src="/images/yellow-bg.svg">
+        <img class="image-bottom" src="/images/graphics.svg">
+        <a class="js-scroll-down-button scroll-down-button">How It Works</a>
     </section>
     <section class="process">
       <div class="grid-container">
