--- a/assets/stylesheets/modules/sections.scss
+++ b/assets/stylesheets/modules/sections.scss
@@ -150,8 +150,11 @@
 			background-size: 100% 100%;
 			background-position: 0 2px;
 			background-repeat: no-repeat;
-
 		}
+	}
+
+	.object-ref a {
+	  border-bottom: 2px solid black;
 	}
 
 	&.video-active {
@@ -230,6 +233,277 @@
 			@include calc(width, "100% - 40px");
 		}
 	}
+}
+
+.hero.message {
+	height: 120vh;
+	max-height: 825px;
+
+	.text-row {
+		position: relative;
+		z-index: 50;
+		margin-top: 120px;
+
+		.col-6 {
+			display: block;
+			float: none;
+			margin: 0 auto;
+			color: #fff;
+		}
+
+		.col-6 h1 {
+			font-size: 1.45em;
+		}
+	}
+
+	.conversation-demo {
+		
+	}
+
+	.bubble {
+	margin-top: 100px;
+	  @include calc(width, "50% - 15px");
+	  box-sizing: border-box;
+	  position: absolute;
+	  z-index: 10;
+	}
+
+	.bubble.question {
+	  left: 0;
+	  @include transition(all, 0.5s, ease-in-out);
+	}
+
+	.bubble.answer {
+	  right: 0;
+	  @include transition(all, 0.5s, ease-in-out);
+	}
+
+	img.bg-image {
+		position: absolute;
+		top: 0;
+		z-index: 0;
+	}
+
+	.bubble.question {
+	  top: 60px;
+	}
+
+	.bubble.answer {
+	  top: 80px;
+	}
+
+	.bubble .bubble-inner {
+	  width: 100%;
+	  box-sizing: border-box;
+	  padding: 25px;
+	  background: $colorTwo;
+	  color: #fff;
+	  z-index: 2;
+	  font-size: 21px;
+	  font-family: "Gotham-bold", sans-serif;
+	  line-height: 1.3;
+	   @include border-radius(0 10px 10px 10px);
+
+	  &:after {
+	  	content: "";
+	  	display: block;
+	  	background-image: url('/images/bubble_triangle.svg');
+	  	background-position: 0 0;
+	  	background-repeat: no-repeat;
+	  	background-size: 100% 100%;
+	  	width: 40px;
+	  	height: 40px;
+	  	position: absolute;
+	  	top: -30px;
+	  	left: 0;
+	  }
+	}
+
+	.bubble.answer .bubble-inner {
+		@include border-radius( 10px 10px 0 10px);
+
+		&:after {
+			top: auto;
+			bottom: -30px;
+			@include transform(rotate(180deg));
+			right: 0;
+			left: auto;
+		}
+	}
+
+	.bubble h4 {
+		color: #ECBE2B;
+		font-family: "Gotham-bold", sans-serif;
+		padding-bottom: 20px;
+	}
+
+	.bubble.question h4 {
+		color: #4BC0ED;
+	}
+
+	.bubble.answer.off {
+	  @include transform(translateX(150%));
+	  @include transition(all, 0.5s, ease-in-out);
+	}
+
+	.bubble.question.off {
+	  @include transform(translateX(-150%));
+	  @include transition(all, 0.5s, ease-in-out);
+	}
+
+	.bubble.question .text {
+	  border-bottom-left-radius: 0;
+	}
+
+	.bubble.answer .text {
+	  border-top-right-radius: 0;
+	}
+
+	.buttons {
+		width: 400px;
+		position: relative;
+		display: block;
+		top: 290px;
+		margin: 0 auto;
+		z-index: 10;
+	}
+
+	button {
+		float: left;
+		@include calc(width, "50% - 15px");
+		padding: 15px 15px;
+		margin-right: 30px;
+		margin: 0;
+		font-family: "Gotham-bold", sans-serif;
+		background: #2A2A2A;
+		color: #fff;
+		border: 0;
+		font-size: 0.9em;
+		box-sizing: border-box;
+		border-radius: 0;
+		@include border-radius(5px);
+		-webkit-appearance: none;
+   		-moz-appearance: none;
+   		appearance: none;
+   		cursor: pointer;
+
+   		&:hover {
+   			color: #ECBE2B;
+   		}
+
+   		&:after {
+			content: "";
+			display: block;
+			width: 17px; 
+			height: 17px;
+			background-image: url('/images/arrow-yellow.svg');
+			margin-top: 2px;
+			background-size: 100% 100%;
+			background-position: 0 0;
+			float: right;
+			margin-left: 10px;
+		}
+   	}
+
+   	button.new-question {
+   		&:after {
+   			@include transform(rotate(180deg));
+   			float: left;
+   			background-image: url('/images/arrow-blue.svg');
+   			margin-left: 0px;
+   			margin-right: 10px;
+   		}
+
+   		&:hover {
+   			color: #4BC0ED;
+   		}
+   	}
+
+   	button:nth-child(2) {
+   		float: right;
+   	}
+
+	.bubble.question .shadow {
+	  left: -40px;
+	}
+
+	.bubble.answer .shadow {
+	  top: 190px;
+	  left: 40px;
+	}
+
+	.bubble.question {
+	  padding-bottom: 25px;
+	}
+
+	.bubble.answer {
+	  padding-top: 25px;
+	}
+
+	.bubble .object-ref {
+		font-family: "Gotham-bold", sans-serif;
+		color: #fff;
+	  height: 25px;
+	  padding-top: 8px; 
+	  padding-left: 10px; 
+	  padding-right: 10px;
+	  position: absolute;
+	  top: 50px; right: 25px;
+	  border-radius: 2px 2px 0 0;
+	  z-index: 2;
+	  opacity: 0.3;
+	}
+
+	.bubble .object-ref a {
+		color: #fff;
+		border-bottom: 0;
+	}
+
+	@include mq("small", "max-width") {
+
+		.buttons {
+			width: 100%;
+			top: 400px;
+		}
+
+		.buttons button:after {
+			display: none;
+		}
+
+		.text-row {
+			margin-top: 40px;
+		}
+
+		.text-row .col-6 {
+			width: 100%;
+
+			h1 {
+				font-size: 1.2em;
+				line-height: 1.4;
+			}
+		}
+
+		.bubble { 
+			width: 100%;
+			font-size: 0.8em;
+		}
+
+		.bubble-inner {
+			font-size: 18px;
+		}
+
+		.bubble-inner h4 {
+			font-size: 18px;
+		}
+
+		.bubble-inner .text {
+			font-size: 18px;
+		}
+
+		.bubble.answer {
+	  		top: 220px;
+		}
+	}	
 }
 
 .hero.video {
