--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -857,6 +857,8 @@ a {
       background-size: 100% 100%;
       background-position: 0 2px;
       background-repeat: no-repeat; }
+  .hero .object-ref a {
+    border-bottom: 2px solid black; }
   .hero.video-active img {
     opacity: 0.1; }
   .hero.video-active .information-holder {
@@ -900,6 +902,233 @@ a {
       width: -moz-calc(100% - 40px);
       width: -webkit-calc(100% - 40px);
       width: calc(100% - 40px); } }
+
+.hero.message {
+  height: 120vh;
+  max-height: 825px; }
+  .hero.message .text-row {
+    position: relative;
+    z-index: 50;
+    margin-top: 120px; }
+    .hero.message .text-row .col-6 {
+      display: block;
+      float: none;
+      margin: 0 auto;
+      color: #fff; }
+    .hero.message .text-row .col-6 h1 {
+      font-size: 1.45em; }
+  .hero.message .bubble {
+    margin-top: 100px;
+    width: -moz-calc(50% - 15px);
+    width: -webkit-calc(50% - 15px);
+    width: calc(50% - 15px);
+    box-sizing: border-box;
+    position: absolute;
+    z-index: 10; }
+  .hero.message .bubble.question {
+    left: 0;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out; }
+  .hero.message .bubble.answer {
+    right: 0;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out; }
+  .hero.message img.bg-image {
+    position: absolute;
+    top: 0;
+    z-index: 0; }
+  .hero.message .bubble.question {
+    top: 60px; }
+  .hero.message .bubble.answer {
+    top: 80px; }
+  .hero.message .bubble .bubble-inner {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 25px;
+    background: #2A2A2A;
+    color: #fff;
+    z-index: 2;
+    font-size: 21px;
+    font-family: "Gotham-bold", sans-serif;
+    line-height: 1.3;
+    -webkit-border-radius: 0 10px 10px 10px;
+    -moz-border-radius: 0 10px 10px 10px;
+    -ms-border-radius: 0 10px 10px 10px;
+    -o-border-radius: 0 10px 10px 10px;
+    border-radius: 0 10px 10px 10px; }
+    .hero.message .bubble .bubble-inner:after {
+      content: "";
+      display: block;
+      background-image: url("/images/bubble_triangle.svg");
+      background-position: 0 0;
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
+      width: 40px;
+      height: 40px;
+      position: absolute;
+      top: -30px;
+      left: 0; }
+  .hero.message .bubble.answer .bubble-inner {
+    -webkit-border-radius: 10px 10px 0 10px;
+    -moz-border-radius: 10px 10px 0 10px;
+    -ms-border-radius: 10px 10px 0 10px;
+    -o-border-radius: 10px 10px 0 10px;
+    border-radius: 10px 10px 0 10px; }
+    .hero.message .bubble.answer .bubble-inner:after {
+      top: auto;
+      bottom: -30px;
+      -webkit-transform: rotate(180deg);
+      -moz-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+      -o-transform: rotate(180deg);
+      transform: rotate(180deg);
+      right: 0;
+      left: auto; }
+  .hero.message .bubble h4 {
+    color: #ECBE2B;
+    font-family: "Gotham-bold", sans-serif;
+    padding-bottom: 20px; }
+  .hero.message .bubble.question h4 {
+    color: #4BC0ED; }
+  .hero.message .bubble.answer.off {
+    -webkit-transform: translateX(150%);
+    -moz-transform: translateX(150%);
+    -ms-transform: translateX(150%);
+    -o-transform: translateX(150%);
+    transform: translateX(150%);
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out; }
+  .hero.message .bubble.question.off {
+    -webkit-transform: translateX(-150%);
+    -moz-transform: translateX(-150%);
+    -ms-transform: translateX(-150%);
+    -o-transform: translateX(-150%);
+    transform: translateX(-150%);
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out; }
+  .hero.message .bubble.question .text {
+    border-bottom-left-radius: 0; }
+  .hero.message .bubble.answer .text {
+    border-top-right-radius: 0; }
+  .hero.message .buttons {
+    width: 400px;
+    position: relative;
+    display: block;
+    top: 290px;
+    margin: 0 auto;
+    z-index: 10; }
+  .hero.message button {
+    float: left;
+    width: -moz-calc(50% - 15px);
+    width: -webkit-calc(50% - 15px);
+    width: calc(50% - 15px);
+    padding: 15px 15px;
+    margin-right: 30px;
+    margin: 0;
+    font-family: "Gotham-bold", sans-serif;
+    background: #2A2A2A;
+    color: #fff;
+    border: 0;
+    font-size: 0.9em;
+    box-sizing: border-box;
+    border-radius: 0;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    border-radius: 5px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    cursor: pointer; }
+    .hero.message button:hover {
+      color: #ECBE2B; }
+    .hero.message button:after {
+      content: "";
+      display: block;
+      width: 17px;
+      height: 17px;
+      background-image: url("/images/arrow-yellow.svg");
+      margin-top: 2px;
+      background-size: 100% 100%;
+      background-position: 0 0;
+      float: right;
+      margin-left: 10px; }
+  .hero.message button.new-question:after {
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    transform: rotate(180deg);
+    float: left;
+    background-image: url("/images/arrow-blue.svg");
+    margin-left: 0px;
+    margin-right: 10px; }
+  .hero.message button.new-question:hover {
+    color: #4BC0ED; }
+  .hero.message button:nth-child(2) {
+    float: right; }
+  .hero.message .bubble.question .shadow {
+    left: -40px; }
+  .hero.message .bubble.answer .shadow {
+    top: 190px;
+    left: 40px; }
+  .hero.message .bubble.question {
+    padding-bottom: 25px; }
+  .hero.message .bubble.answer {
+    padding-top: 25px; }
+  .hero.message .bubble .object-ref {
+    font-family: "Gotham-bold", sans-serif;
+    color: #fff;
+    height: 25px;
+    padding-top: 8px;
+    padding-left: 10px;
+    padding-right: 10px;
+    position: absolute;
+    top: 50px;
+    right: 25px;
+    border-radius: 2px 2px 0 0;
+    z-index: 2;
+    opacity: 0.3; }
+  .hero.message .bubble .object-ref a {
+    color: #fff;
+    border-bottom: 0; }
+  @media (max-width: 960px) {
+    .hero.message .buttons {
+      width: 100%;
+      top: 400px; }
+    .hero.message .buttons button:after {
+      display: none; }
+    .hero.message .text-row {
+      margin-top: 40px; }
+    .hero.message .text-row .col-6 {
+      width: 100%; }
+      .hero.message .text-row .col-6 h1 {
+        font-size: 1.2em;
+        line-height: 1.4; }
+    .hero.message .bubble {
+      width: 100%;
+      font-size: 0.8em; }
+    .hero.message .bubble-inner {
+      font-size: 18px; }
+    .hero.message .bubble-inner h4 {
+      font-size: 18px; }
+    .hero.message .bubble-inner .text {
+      font-size: 18px; }
+    .hero.message .bubble.answer {
+      top: 220px; } }
 
 .hero.video {
   height: 90vh; }
