--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1012,6 +1012,7 @@ a {
     -ms-transform: translateX(150%);
     -o-transform: translateX(150%);
     transform: translateX(150%);
+    right: 0;
     -webkit-transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
     -ms-transition: all 0.5s ease-in-out;
@@ -1023,6 +1024,7 @@ a {
     -ms-transform: translateX(-150%);
     -o-transform: translateX(-150%);
     transform: translateX(-150%);
+    left: 0;
     -webkit-transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
     -ms-transition: all 0.5s ease-in-out;
