--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1145,7 +1145,18 @@ a {
         top: 220px; } }
 
 .hero.video {
-  height: 90vh; }
+  height: 70vh;
+  max-height: 650px; }
+  .hero.video .col-6-fake {
+    top: 60%; }
+  .hero.video .image-bottom {
+    top: 0;
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    transform: rotate(180deg);
+    bottom: auto; }
 
 .process {
   background: #DA0979;
