--- a/views/index.erb
+++ b/views/index.erb
@@ -72,7 +72,7 @@
     </section>
     <section class="hero video">
       <img class="image-bottom" src="/images/graphics.svg">
-      <img src="/images/yellow-bg.svg">
+      <img class="bg-image" src="/images/yellow-bg.svg">
       <div class="fake-grid">
         <div class="col-6-fake information-holder">
           <div class="image">
