--- a/views/index.erb
+++ b/views/index.erb
@@ -10,7 +10,7 @@
       <div class="grid-container">
           <div class="row text-row">
             <div class="col-6">
-              <h1>Hello Lamp Post launches on 24th October, waking up for the first time in London from Queen Elizabeth Olympic Park.</h1>
+              <h1>Hello Lamp Post runs until November 30th, waking up for the first time in London from Queen Elizabeth Olympic Park.</h1>
             </div>
           </div>
           <div class="row">
