Removed object for now

--- a/views/index.erb
+++ b/views/index.erb
@@ -26,7 +26,7 @@
                     <h4>Answer</h4>
                     <div class="text">Cats</div>
                   </div>
-                  <div class="object-ref">Via Lamp Post #236346</div>
+                  <div class="object-ref"></div>
                 </div>
                 <div class="buttons">
                   <button class="new-question hidden" id="new-question-button">Next Question</button>
