--- a/views/index.erb
+++ b/views/index.erb
@@ -18,15 +18,15 @@
                 <div class="bubble question" id="question-bubble">
                   <div class="bubble-inner">
                     <h4>Question</h4>
-                    <div class="text">Do you prefer cats or dogs?</div>
+                    <div class="text">I hope you've had a nice journey out today. How do you think people will travel in 10 years?</div>
                   </div>
                 </div>
                 <div class="bubble answer" id="answer-bubble">
                   <div class="bubble-inner">
                     <h4>Answer</h4>
-                    <div class="text">Cats</div>
+                    <div class="text">Maybe driverless cars, maybe giant metal eagles with glowing eyes and side-mounted machineguns</div>
                   </div>
-                  <div class="object-ref"></div>
+                  <div class="object-ref">Hockey and Tennis Centre #hatc</div>
                 </div>
                 <div class="buttons">
                   <button class="new-question hidden" id="new-question-button">Next Question</button>
@@ -35,7 +35,7 @@
             </div>
           </div>
         </div>
-        <img class="bg-image" src="/images/yellow-bg.svg">
+        <img class="bg-image" src="/images/home-image.jpg">
         <img class="image-bottom" src="/images/graphics.svg">
         <a class="js-scroll-down-button scroll-down-button">How It Works</a>
     </section>
