--- a/views/index.erb
+++ b/views/index.erb
@@ -10,7 +10,7 @@
       <div class="grid-container">
           <div class="row text-row">
             <div class="col-6">
-              <h1>Hello Lamp Post runs until November 30th, waking up for the first time in London from Queen Elizabeth Olympic Park.</h1>
+              <h1>Hello Lamp Post ran for six weeks in November and December 2016, bringing Queen Elizabeth Olympic Park's street furniture to life.</h1>
             </div>
           </div>
           <div class="row">
@@ -56,7 +56,7 @@
               <img src="/images/process-2.svg">
             </div>
             <h4>Say Hello</h4>
-            <p>Send a text in this format: <span class="bold">Hello object #code</span> e.g. “Hello Lamp Post #B6291”. to <span class="bold">0203 389 8860</span></p>
+            <p>Send a text in this format: <span class="bold">Hello object #code</span> e.g. “Hello Lamp Post #B6291”.</p>
           </div>
         </div>
         <div class="col-4">
